fixed rules overflowing on mobile and sticky card zone

--- a/src/app/css/rulesSection.module.css
+++ b/src/app/css/rulesSection.module.css
@@ -1,8 +1,8 @@
-.rulesSection{
-    width: 50rem;
-    word-wrap: break-word;
+.rulesSection {
+  max-width: 100%;
+  word-wrap: break-word;
 }
 
-.mainText h3{
-    font-size: 20px;
+.mainText h3 {
+  font-size: 20px;
 }
